fix code z-index boxs

--- a/src/Components/Heade/CSS/Header.css
+++ b/src/Components/Heade/CSS/Header.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   height: 80px;
   position: relative;
-  /* inset: 0; */
+  z-index: 6;
 }
 
 header nav {
@@ -10,7 +10,6 @@ header nav {
   height: inherit;
   background-color: #ffffff;
   position: fixed;
-  z-index: 6;
   border: none;
   outline: none;
 }
@@ -132,7 +131,7 @@ header nav {
   border-radius: 3px;
   margin-top: 4px;
   transition: all 0.2s ease;
-  z-index: 0;
+  position: relative;
 }
 
 .boxlogin:focus {
@@ -148,7 +147,7 @@ header nav {
 .miniPageAccount {
   position: absolute;
   top: calc(100% + 1px);
-  left: 5.7rem;
+  left: 0;
   box-shadow: 0 3px 8px 0 rgb(0 0 0 / 30%);
   background: #ffffff;
   border-radius: 8px;
@@ -358,7 +357,7 @@ header nav {
   position: fixed;
   top: 80px;
   left: 0;
-  z-index: 7;
+  z-index: -1;
   background-color: #ffffff;
   box-shadow: 0 7px 8px rgb(0, 0, 0, 0.04);
   overflow: visible;
@@ -370,7 +369,7 @@ header nav {
   position: fixed;
   top: 80px;
   right: 0;
-  z-index: 1;
+  z-index: -1;
   background-color: #ffffff;
   box-shadow: 0 7px 8px rgb(0, 0, 0, 0.04);
   overflow: visible;
