--- a/src/Components/Sign/Sign in/CSS/Sign-in.css
+++ b/src/Components/Sign/Sign in/CSS/Sign-in.css
@@ -2,9 +2,9 @@
   width: 100%;
   height: 100%;
   background-color: rgb(255, 255, 255);
-  z-index: 3;
+  z-index: 8;
   position: absolute;
-  top: 3em;
+  top: 0;
   left: 0;
   display: flex;
   align-items: center;
